--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -35,6 +35,7 @@
 
 .hero-text {
   width: 50%;
+  padding-top: 100px;
   & > * {
     color: #fff;
     margin-bottom: 2rem;
@@ -48,8 +49,9 @@
 }
 .hero-image {
   width: 30%;
+  padding-top: 100px;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .hero {
     flex-direction: column;
   }
@@ -64,9 +66,10 @@
     text-align: center;
   }
   .hero-image {
-    width: 50%;
-    &img {
-      width: 100%;
-    }
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    align-items: center;
+    padding-top: 30px;
   }
 }
