--- a/src/components/product/productSummary/ProductSummary.scss
+++ b/src/components/product/productSummary/ProductSummary.scss
@@ -9,19 +9,24 @@
 .card {
   border: 1px solid #ccc;
   // border-bottom: 3px solid var(--light-blue);
-  padding: 5px;
+  padding: 50px;
   background-color: #f5f6fa;
+  
 }
 
 .card1 {
-  background-color: #b624ff;
+  background-color: #45454b;
+  border-radius: 35px;
 }
 .card2 {
-  background-color: #32963d;
+  background-color: #45454b;
+  border-radius: 35px;
 }
 .card3 {
-  background-color: #c41849;
+  background-color: #45454b;
+  border-radius: 35px;
 }
 .card4 {
-  background-color: #03a5fc;
+  background-color: #45454b;
+  border-radius: 35px;
 }
